[gd_scene load_steps=14 format=2]

[ext_resource path="res://TextureRect.tscn" type="PackedScene" id=1]
[ext_resource path="res://font53.tres" type="DynamicFont" id=2]
[ext_resource path="res://Results.gd" type="Script" id=3]
[ext_resource path="res://UI/continuar3.png" type="Texture" id=4]
[ext_resource path="res://UI/continuar1.png" type="Texture" id=5]
[ext_resource path="res://UI/continuar2.png" type="Texture" id=6]
[ext_resource path="res://UI/sair1.png" type="Texture" id=7]
[ext_resource path="res://UI/sair3.png" type="Texture" id=8]
[ext_resource path="res://UI/sair2.png" type="Texture" id=9]
[ext_resource path="res://Sounds/MenuSelection.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/MenuChange.wav" type="AudioStream" id=11]
[ext_resource path="res://Sounds/ResultsGameOver.wav" type="AudioStream" id=12]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[node name="Results" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.5
margin_right = 400.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 263.0
margin_right = 803.0
margin_bottom = 341.0

[node name="FinishedLabel" type="Label" parent="VBoxContainer/CenterContainer3"]
margin_left = 204.0
margin_right = 599.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "PARABÃ‰NS !"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 345.0
margin_right = 803.0
margin_bottom = 423.0

[node name="ErrorLabel" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 302.0
margin_right = 501.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "Erros: "

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 427.0
margin_right = 803.0
margin_bottom = 505.0

[node name="TimeLabel" type="Label" parent="VBoxContainer/CenterContainer2"]
margin_right = 803.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "Tempo de Resposta: 0.000"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -170.0
margin_right = 170.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2"]
margin_top = 656.0
margin_right = 340.0
margin_bottom = 710.0

[node name="PlayButton" type="TextureButton" parent="VBoxContainer2/CenterContainer"]
margin_right = 340.0
margin_bottom = 54.0
focus_neighbour_top = NodePath("../../CenterContainer3/QuitButton")
theme = SubResource( 1 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer2"]
margin_top = 714.0
margin_right = 340.0
margin_bottom = 768.0

[node name="QuitButton" type="TextureButton" parent="VBoxContainer2/CenterContainer3"]
margin_left = 106.0
margin_right = 234.0
margin_bottom = 54.0
focus_neighbour_bottom = NodePath("../../CenterContainer/PlayButton")
theme = SubResource( 1 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 9 )

[node name="AudioChange" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="AudioResults" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="AudioSelection" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="focus_exited" from="VBoxContainer2/CenterContainer/PlayButton" to="." method="_on_PlayButton_focus_exited"]
[connection signal="pressed" from="VBoxContainer2/CenterContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="focus_exited" from="VBoxContainer2/CenterContainer3/QuitButton" to="." method="_on_QuitButton_focus_exited"]
[connection signal="pressed" from="VBoxContainer2/CenterContainer3/QuitButton" to="." method="_on_QuitButton_pressed"]
